--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "eminent-escape",
+  "name": "galactic-graham",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.6.3"
+    "astro": "^4.6.2",
+    "@astrojs/check": "^0.5.10",
+    "typescript": "^5.4.5"
   }
 }
